First Comment bugs out on mobile

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -35,6 +35,7 @@ body
 #AppContainer
 	background: $gloomyBlue
 	height: 100%
+	min-height: 100vh
 
 
 .menuOverLay
